force-app/main/default/objects/Region__c/Region__c.object-meta.xml
<CustomObject>
    <description>地域マスタ</description>
    <label>地域</label>
    <nameField>
        <label>地域名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>