force-app/main/default/objects/Region__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>市区町村群名</label>
    <length>30</length>
    <type>Text</type>
</CustomField>