force-app/main/default/objects/Region__c/fields/City_kana__c.field-meta.xml
<CustomField>
    <fullName>City_kana__c</fullName>
    <label>市区町村郡名（カナ）</label>
    <length>30</length>
    <type>Text</type>
</CustomField>