force-app/main/default/objects/Region__c/fields/Prefecture__c.field-meta.xml
<CustomField>
    <fullName>Prefecture__c</fullName>
    <label>都道府県名</label>
    <length>5</length>
    <type>Text</type>
</CustomField>