force-app/main/default/objects/Region__c/fields/Prefecture_kana__c.field-meta.xml
<CustomField>
    <fullName>Prefecture_kana__c</fullName>
    <label>都道府県名（カナ）</label>
    <length>30</length>
    <type>Text</type>
</CustomField>