force-app/main/default/objects/Region__c/fields/Region_key__c.field-meta.xml
<CustomField>
    <fullName>Region_key__c</fullName>
    <externalId>true</externalId>
    <label>県名＋市町村名（外部キー）</label>
    <length>30</length>
    <type>Text</type>
</CustomField>