force-app/main/default/objects/Region__c/fields/RegionCode__c.field-meta.xml
<CustomField>
    <fullName>RegionCode__c</fullName>
    <label>地域コード</label>
    <length>30</length>
    <type>Text</type>
</CustomField>