force-app/main/default/objects/Region__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CountryName__c</columns>
    <columns>RegionCode__c</columns>
    <columns>Prefecture__c</columns>
    <columns>Prefecture_kana__c</columns>
    <columns>City__c</columns>
    <columns>City_kana__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>